# skills

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  deny.toml  dist-workspace.toml  upstreams.lock.json  upstreams.toml
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
agents/: agent-docs.md  agent-explore.md
agents/claude/: agent-docs.md  agent-explore.md  agent-websearch.md
agents/codex/: agent-explorer.toml  docs-researcher.toml  web-researcher.toml
crates/arthur-skills/: Cargo.toml  build.rs
crates/arthur-skills/build_support/: mod.rs  model.rs  path_policy.rs  scanner.rs
crates/arthur-skills/build_support/providers/: claude.rs  codex.rs  mod.rs  permissions.rs  references.rs
crates/arthur-skills/schemas/: catalog-v1.inventory.json  claude-agent-2.1.217.schema.json  codex-agent-0.144.6.schema.json
crates/arthur-skills/src/: adoption.rs  app.rs  catalog.rs  cli.rs  command.rs  diagnostic.rs  engine.rs  health.rs  lib.rs  lifecycle.rs  main.rs  operations.rs  output.rs  plain.rs  plan.rs  platform.rs  provider.rs  provider_health.rs  receipt.rs  transaction.rs  ui.rs  workflow.rs
crates/arthur-skills/src/catalog/: tests.rs
crates/arthur-skills/src/health/: probes.rs
crates/arthur-skills/src/lifecycle/: tests.rs
crates/arthur-skills/src/ui/: logo.rs
crates/arthur-skills/src/upstream/: git.rs  mod.rs  model.rs  sync.rs  tests.rs
crates/arthur-skills/tests/: catalog_source_contract.rs  ep005_contract.rs  lifecycle_contract.rs  process_contract.rs  release_contract.rs  terminal_lifecycle.rs  transaction_error_contract.rs
skills/clerk-cli/: SKILL.md
skills/implement-epic/: SKILL.md
skills/meta-code/: SKILL.md
skills/meta-debug/: SKILL.md
skills/neon-cli/: SKILL.md
tasks/: prd-arthur-workflow-installer-status.json  prd-arthur-workflow-installer.md
(+119 files in other folders)
