[workspace]
members = ["crates/arthur-skills"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/arthjean/skills"
publish = false

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
fs2 = "0.4.3"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
semver = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3.18"
toml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
