[package]
name = "arthur-skills"
description = "Portable installer for the Arthur Workflow catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
clap.workspace = true
crossterm.workspace = true
fs2.workspace = true
ratatui.workspace = true
rustix.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signal-hook.workspace = true

[target.'cfg(windows)'.dependencies]
atomicwrites.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
nix = { version = "0.30", features = ["fs", "term"] }
tempfile = "3.23"
toml.workspace = true

[lints]
workspace = true

[package.metadata.dist]
dist = true
